<resources>
    <string name="app_name">ToDo List</string>
    <string name="title_app">ToDo App</string>
    <string name="welcomeApp">Welcome to ToDo App</string>
    <string name="signIn">Sign In</string>
    <string name="descriptionLogin">Sign in to your account</string>
    <string name="descriptionApp">An app so you can better organize your days</string>
    <string name="Register">Sign Up</string>
    <string name="Login">Login</string>
    <string name="homepage">Homepage</string>
    <string name="tasks">Tasks</string>
    <string name="Welcome">Welcome</string>
    <string name="taskInfo">Task Info</string>
    <string name="Name">Username: </string>
    <string name="Email">Email:</string>
    <string name="Password">Password</string>
    <string name="numberOfTask">Number of task:</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="createAccount">Create Account</string>
    <string name="startedNow">to get started now!</string>
    <string name="singUpWith">Or Sign Up With</string>
    <string name="noTaskRegister">No task register</string>
    <string name="toDoFragment">To Do</string>
    <string name="userFragment">User</string>
    <string name="allTask">All Task</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="userInfo">User profile</string>
    <string name="yourInfo">Your information</string>
    <string name="editUser">Edit</string>
    <string name="logOut">Log Out</string>
    <string name="deleteTask">Delete task</string>
    <string name="scheduled">Scheduled</string>
    <string name="newTask">New task</string>
    <string name="createNewTask">Create a new task</string>
    <string name="titleTask">Title task</string>
    <string name="descriptionTask">Description task</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="saveTask">Save task</string>
    <string name="errorDate">The date and time must be current or later than the current one</string>
    <string name="descriptionTitle">Description task: </string>
    <string name="when">When?</string>
    <string name="whatTime">What time?</string>
    <string name="homework">Homework</string>
    <string name="shop">Shopping</string>
    <string name="dinner">Dinner</string>
    <string name="fitness">Fitness</string>
    <string name="study">Study</string>
    <string name="other">Other</string>
    <string name="errorLogin">Wrong username or password</string>
    <string name="emailEmpty">Email is empty</string>
    <string name="passwordEmpty">Password is empty</string>
    <string name="nameRequired">Name is required</string>
    <string name="emailRequired">Email is required</string>
    <string name="passwordRequired">Password is required</string>
    <string name="confirmPasswordRequired">Confirm password is required</string>
    <string name="passwordNotMatch">Password not match</string>
    <string name="emailExist">Email already exist</string>
    <string name="fillField">Please fill this field</string>
    <string name="taskAddedSuccessfully">Task added successfully</string>
    <string name="taskNotAdded">Task not added</string>
    <string name="task">Task:</string>

    <string-array name="typeTask">
        <item>@string/homework</item>
        <item>@string/shop</item>
        <item>@string/dinner</item>
        <item>@string/fitness</item>
        <item>@string/study</item>
        <item>@string/other</item>
    </string-array>


</resources>
