<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.fragments.AddTaskFragment">

    <TextView
        android:id="@+id/txtTitleActivity"
        android:layout_width="336dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/newTask"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/edtTextTitleTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_background_add"
        android:ems="10"
        android:hint="@string/titleTask"
        android:inputType="textPersonName"
        android:lines="1"
        android:maxLength="30"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <EditText
        android:id="@+id/edtDescriptionTask"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_background_add"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/descriptionTask"
        android:inputType="textPersonName"
        android:maxLength="300"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveTask"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_background_save"
        android:padding="10dp"
        android:text="@string/saveTask"
        android:textStyle="bold"
        app:drawableRightCompat="@drawable/baseline_save_24" />


</LinearLayout>