<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_principal_page"
    android:orientation="vertical"
    tools:context=".controller.fragments.UserFragment">

    <TextView
        android:id="@+id/tvUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:text="@string/userInfo"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="start"
        android:text="@string/yourInfo"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/Name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_person_24" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:autoSizeMaxTextSize="25sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:drawablePadding="20dp"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/Email"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_email_24" />

        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:autoSizeMaxTextSize="25sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:gravity="start"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/numberOfTask"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_checklist_24" />

        <TextView
            android:id="@+id/tvUserNumberOfTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogOut"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_background_logout"
            android:hint="@string/logOut"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/baseline_logout_24" />
    </LinearLayout>


</LinearLayout>